fix(site): update h1 letter spacing

--- a/src/components/capacitor-site/capacitor-site.scss
+++ b/src/components/capacitor-site/capacitor-site.scss
@@ -175,7 +175,7 @@ h1, h2, h3, h4 {
 
 h1 {
   font-size: 40px;
-  letter-spacing: -0.02em;
+  letter-spacing: -0.03em;
   font-weight: 600;
 }
 
